# Mundam

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  index.html  input-service-rewrite.md  media-streaming-optimization.md  package-lock.json  package.json  viewport-refactoring.md
src-tauri/: Cargo.toml  check_output.txt  dev.db  download-ffmpeg.sh  download-pdfium.sh  tauri.conf.json
src-tauri/assimp/macos/: assimp
src-tauri/capabilities/: default.json
src-tauri/ffmpeg/: .gitkeep
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260210000000_initial_schema.sql  20260210000001_add_performance_indices.sql
src-tauri/permissions/: main.toml  tags.toml
src-tauri/src/: audio_commands.rs  config.rs  database.rs  database_extension.rs  db_smart_folders.rs  db_tags.rs  error.rs  ffmpeg.rs  formats.rs  lib.rs  location_commands.rs  main.rs  metadata_commands.rs  protocols.rs  schema.sql  search_logic.rs  settings_commands.rs  smart_folder_commands.rs  tag_commands.rs  thumbnail_commands.rs  thumbnail_priority.rs  thumbnail_worker.rs  thumbnails.rs
src-tauri/src/db/: folders.rs  images.rs  mod.rs  models.rs  search.rs  settings.rs  smart_folders.rs  tags.rs
src-tauri/src/formats/: definitions.rs  mod.rs  types.rs
src-tauri/src/indexer/: metadata.rs  mod.rs  scan.rs  types.rs  watcher.rs
src-tauri/src/media/: commands.rs  ffmpeg.rs  metadata_reader.rs  mod.rs  pdf.rs
src-tauri/src/protocols/: audio.rs  audio_stream.rs  common.rs  font.rs  image.rs  mod.rs  model.rs  placeholders.rs  thumb.rs  video.rs  video_stream.rs
src-tauri/src/settings/: commands.rs  config.rs
src-tauri/src/streaming/: linear.rs  mod.rs  playlist.rs  probe.rs  process_manager.rs  segment.rs  server.rs
src-tauri/src/thumbnails/: affinity.rs  (+15 more)
(+430 files in other folders)
